# HallA_ComptonG4

./: .gitignore  CMakeLists.txt  ComptonG4.cc  ComptonG4Root.cc  ComptonG4_GUI.mac  ComptonGeometry.xml  PhotonDetectorGeometryTemplate.gdml  PhotonDetectorSolids.gdml  PhotonDetectorVolumes.gdml  README  README.md  test_geometry.mac
cmake/modules/: FindROOT.cmake
detectors/include/: ComptonG4Crystal.hh  ComptonG4PMTCathode.hh
detectors/src/: ComptonG4Crystal.cc
farm_submit/: sim_1thin_lead.mac  sim_1thin_lead.sh  sim_1thin_lead.xml  sim_2thin_lead.sh  sim_2thin_lead.xml  sim_879_2thin_lead.mac  sim_879_2thin_lead.sh  sim_879_2thin_lead.xml  sim_no_thin_lead.mac  sim_no_thin_lead.sh  sim_no_thin_lead.xml  sim_submit.xml  sim_test.mac  sim_test.xml  sim_test_879_2thin_lead.mac  sim_thin_lead.mac  sim_thin_lead.sh  sim_thin_lead.xml
geometries/: Compton1ThinLead.xml  Compton2ThinLeads.xml  ComptonBeamline.xml  ComptonDefinitions.xml  ComptonGeometry.xml  ComptonGeometry_1thin_lead.xml  ComptonGeometry_2thin_lead.xml  ComptonGeometry_no_lead_mag.xml  ComptonGeometry_no_thin_lead.xml  ComptonGeometry_thin_lead.xml  ComptonLeadTungstateDetector.xml  ComptonMaterials.xml  ComptonOpticalSurfaces.xml  ComptonSolids.xml  ComptonStandardGeometry.xml  ComptonVolumes.xml  ComptonVolumesMag.xml  MagneticDefinitions.xml
geometries/specs/: process_data.C  sim_mylar_rindex.xml  sim_pbwo4_abslength_average.xml  sim_pbwo4_emission.xml  sim_pbwo4_rindex_average.xml  sim_pbwo4_transmission.xml  sim_pmt_efficiency.xml
include/: ComptonConstants.hh  ComptonDetectorConstruction.hh  ComptonG4Analysis.hh  ComptonG4DetectorConstruction.hh  ComptonG4DetectorConstructionMessenger.hh  ComptonG4EventAction.hh  ComptonG4EventMessenger.hh  ComptonG4PhotonDetectorHit.hh  ComptonG4PhysicsList.hh  ComptonG4PrimaryGeneratorAction.hh  ComptonG4PrimaryGeneratorMessenger.hh  ComptonG4RunAction.hh  ComptonG4RunMessenger.hh  ComptonG4SensitiveDetector.hh  ComptonG4SensitiveDetectorManager.hh  ComptonG4StackingAction.hh  ComptonG4SteppingAction.hh  ComptonPhysicsList.hh  VComptonG4SensitiveDetector.hh
rootScripts/: drawSomething.C
sources/detectors/include/: ComptonG4BeamPolarizer.hh  ComptonG4Crystal.hh  ComptonG4PMTCathode.hh
sources/detectors/src/: ComptonG4BeamPolarizer.cc  ComptonG4Crystal.cc  ComptonG4PMTCathode.cc
sources/hits/include/: ComptonG4BeamHit.hh  ComptonG4EDepHit.hh  ComptonG4Hit.hh  ComptonG4HitsCollection.hh  ComptonG4OpticalHit.hh  ComptonG4OpticalTrackerHit.hh  ComptonG4PrimaryHit.hh  VComptonG4Hit.hh
sources/hits/src/: ComptonG4BeamHit.cc  ComptonG4EDepHit.cc  ComptonG4Hit.cc  ComptonG4OpticalHit.cc  ComptonG4OpticalTrackerHit.cc  ComptonG4PrimaryHit.cc  VComptonG4Hit.cc
sources/include/: ComptonG4Analysis.hh  ComptonG4DetectorConstruction.hh  ComptonG4DetectorConstructionMessenger.hh  ComptonG4DipoleField.hh  ComptonG4GDMLVolumes.hh  ComptonG4OpticalTracker.hh  ComptonG4PrimaryGeneratorAction.hh  ComptonG4PrimaryGeneratorMessenger.hh  ComptonG4Radiation.hh  ComptonG4RadiationMessenger.hh  ComptonG4RunAction.hh  ComptonG4RunMessenger.hh  ComptonG4SensitiveDetectorFactory.hh  ComptonG4SensitiveDetectorManager.hh  ComptonG4SensitiveDetectorMessenger.hh  ComptonG4StackingAction.hh  ComptonG4SteppingAction.hh  ComptonG4SteppingMessenger.hh  ComptonG4UIcmdWithStringOptions.hh  ComptonG4Utils.hh  VComptonG4SensitiveDetector.hh  VComptonG4SensitiveDetectorIO.hh
sources/rootio/include/: ComptonG4BeamData.hh  ComptonG4BeamDataLinkDef.h  ComptonG4Data.hh  ComptonG4DataLinkDef.h  ComptonG4EDepData.hh  ComptonG4EDepDataLinkDef.h  ComptonG4OpticalData.hh  ComptonG4OpticalDataLinkDef.h  ComptonG4OpticalTrackerData.hh  ComptonG4OpticalTrackerDataLinkDef.h  ComptonG4PrimaryData.hh  ComptonG4PrimaryDataLinkDef.h  VComptonG4Data.hh  VComptonG4DataLinkDef.h
sources/rootio/src/: ComptonG4BeamData.hh  ComptonG4Data.cc  ComptonG4EDepData.cc  ComptonG4OpticalData.cc  ComptonG4OpticalTrackerData.cc  ComptonG4PrimaryData.cc  VComptonG4Data.cc
sources/src/: ComptonG4Analysis.cc  ComptonG4DetectorConstruction.cc  ComptonG4DetectorConstructionMessenger.cc  ComptonG4DipoleField.cc  ComptonG4EventAction.cc  ComptonG4EventMessenger.cc  ComptonG4GDMLVolumes.cc  ComptonG4OpticalTracker.cc  ComptonG4PhotonDetectorHit.cc  ComptonG4PrimaryGeneratorAction.cc  ComptonG4PrimaryGeneratorMessenger.cc  ComptonG4Radiation.cc  ComptonG4RadiationMessenger.cc  ComptonG4RunAction.cc  ComptonG4RunMessenger.cc  ComptonG4SensitiveDetectorManager.cc  ComptonG4SensitiveDetectorMessenger.cc  ComptonG4StackingAction.cc  ComptonG4SteppingAction.cc  ComptonG4SteppingMessenger.cc  ComptonG4UIcmdWithStringOptions.cc  ComptonG4Utils.cc  VComptonG4SensitiveDetector.cc  VComptonG4SensitiveDetectorIO.cc
src/: ComptonDetectorConstruction.cc  ComptonG4Analysis.cc  ComptonG4DetectorConstruction.cc  ComptonG4DetectorConstructionMessenger.cc  ComptonG4EventAction.cc  ComptonG4PhysicsList.cc  ComptonG4PrimaryGeneratorAction.cc  ComptonG4PrimaryGeneratorMessenger.cc  ComptonG4RunAction.cc  ComptonG4RunMessenger.cc  ComptonG4SensitiveDetector.cc  ComptonG4SensitiveDetectorFactory.cc  ComptonG4SensitiveDetectorManager.cc  ComptonG4StackingAction.cc  ComptonG4SteppingAction.cc  ComptonG4SteppingMessenger.cc  ComptonPhysicsList.cc  VComptonG4SensitiveDetector.cc
tests/scintyield/: scintyield.mac  scintyield.sh  scintyield.xml
tests/scintyield/geometry/: ComptonDefinitions_scintyield.xml
vis/: Qt.mac  vis.mac
workspace/dvcs/: ComptonG4_GUI.mac  test.cfg  test.mac  test_beam.cfg  test_beam.mac  test_comptonall.cfg  test_comptonall.mac  tst_magnetic.cfg  tst_magnetic.mac
workspace/dvcs/geometries/: ComptonGeometry.gdml
workspace/dvcs/test_magnetic/: tst_mag.mac 
workspace/dvcs/vis/: Qt.mac
workspace/prex2/: test.cfg  test_jaw.mac
workspace/prex2/vis/: Qt.mac  vis.mac
workspace/qweak/: test_geometry.mac
workspace/qweak/background_study/: background_study.cfg  background_study.mac  background_study_general.mac  background_study_run001.mac  background_study_run002.mac  background_study_run003.mac  background_study_run004.mac  (+7 more)
(+91 files in other folders)
